--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
-    <script src="./src/customreact.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="./src/customreact.js"></script> -->
   </body>
 </html>
